k8s/namespaces/llm/vllm/qwen3-30b-a3b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-vllm-qwen3-30b-a3b
  namespace: llm
  labels:
    app.kubernetes.io/name: vllm-qwen3-30b-a3b
spec:
  ports:
  - name: http-vllm-qwen3-30b-a3b
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/name: vllm-qwen3-30b-a3b
  sessionAffinity: None
  type: ClusterIP
