k8s/namespaces/llm/vllm/qwen3-30b-a3b/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vllm-qwen3-30b-a3b-https
  namespace: llm
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qwen3-30b-a3b.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: https-vllm-qwen3-30b-a3b
          port: 80
          passHostHeader: true
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vllm-qwen3-30b-a3b-http
  namespace: llm
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`qwen3-30b-a3b.oglesby.io`)
      kind: Rule
      services:
        - name: http-vllm-qwen3-30b-a3b
          port: 80
          passHostHeader: true
      middlewares:
      - name: internal-whitelist
        namespace: traefik
      - name: redirect-https
        namespace: traefik
